az-demo-app/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - jafdemoaks.southeastasia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: azjafdemoaks.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /webapp1
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /webapp2
