az-demo-app/demo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - jafdemoaks.southeastasia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: jafdemoaks.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 80
        path: /hello-one(/|$)(.*)
      - backend:
          serviceName: aks-helloworld-two
          servicePort: 80
        path: /hello-two(/|$)(.*)
      - backend:
          serviceName: atmos-demo-node 
          servicePort: 3000
        path: /node(/|$)(.*)
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 80
        path: /static(/|$)(.*)
---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     cert-manager.io/cluster-issuer: letsencrypt
# spec:
#   tls:
#   - hosts:
#     - azjafdemoaks.southeastasia.cloudapp.azure.com
#     secretName: tls-secret
#   rules:
#   - host: jafdemoaks.southeastasia.cloudapp.azure.com
#     http:
#       paths:
#       - backend:
#           serviceName: aks-helloworld-one
#           servicePort: 80
#         path: /static(/|$)(.*)
